# ProgettoEsameMicroservizi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: agent1_output.json  agent1_output_example_finance.json  agent1_output_example_hr.json  agent1_output_example_it.json  history.json  reference.json  validation_report.json
data/examples/: 01_valid_baseline.json  02_duplicate_names.json  03_conflicting_facts.json  04_obsolete_data.json  05_missing_domain.json  06_low_reliability.json  07_missing_provenance.json  08_prohibited_terms.json  09_relationship_cycle.json  10_missing_required_domain.json  11_unknown_provenance_source.json  12_forbidden_status.json  13_multi_issue_mix.json
src/: main.py
src/kv/: __init__.py  api.py  llm.py  main.py  models.py  storage.py  validator.py
tests/: test_api_examples.py  test_validator.py
